# Orca

./: .env.example  .gitignore  Dockerfile  Dockerfile.fly  README.md  docker-compose.yml  fly.toml  install.sh  pyproject.toml
.github/workflows/: eval.yml  seed.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  CLAUDE_DESIGN_PROMPTS.md  DESIGN_BRIEF.md  MODEL_CARDS.md  SELF_HOSTING.md
k8s/: configmap.yaml  deployment.yaml  service.yaml
legal/: AI_POLICY.md  PRIVACY_POLICY.md  TERMS_OF_SERVICE.md
orca/: __init__.py  __main__.py  audit.py  character.py  cli.py  config.py  doctor.py  personas.py  tui.py  upgrade.py
orca/auth/: __init__.py  apikeys.py  crypto.py  db.py  email.py  middleware.py  migrate_to_postgres.py  rbac.py  routes.py  store.py  tokens.py  totp.py
orca/brain/: __init__.py  agent.py  context.py  context_intelligence.py  explainability.py  knowledge_graph.py  memory.py  providers.py  reasoning.py  vision.py
orca/code/: __init__.py  sandbox.py
orca/data/: __init__.py  collector.py  curator.py  formatter.py  pipeline.py  seeds.py
orca/docs/: __init__.py  chunker.py  citation_check.py  extractor.py  pii_redact.py  pipeline.py  query_engine.py  reranker.py  semantic_chunker.py  store.py  sufficiency.py
orca/governance/: __init__.py  model_cards.py
orca/license/: __init__.py  gate.py  keys.py  mailer.py  store.py  stripe_hook.py
orca/mcp/: __init__.py  fs_server.py  memory_server.py
orca/ops/: backup.py
orca/serve/: __init__.py  account_delete.py  api.py  export.py  metrics.py  moderation.py  ratelimit.py  session_store.py
orca/serve/web/: index.html
orca/tools/: __init__.py  code.py  web.py
orca/train/: __init__.py  blind_ab.py  cloud.py  config.py  distill.py  eval.py  finetune.py  persona_eval.py  prepare.py  redteam.py  regression.py  variants.py
orca/variants/: __init__.py  core.py  nano.py  ultra.py
scripts/: deploy_fly.sh  publish.sh
