[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orca-ai"
version = "1.0.0"
description = "Orca — 100% private local AI, built by Atheris. Document Q&A, code interpreter, voice input. Your hardware, your data, zero cloud."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Atheris", email = "hello@atheris.ai" }]
keywords = ["ai", "llm", "local", "private", "ollama", "agent", "rag", "document-qa"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
]
dependencies = [
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.0.0",
    "diskcache>=5.6.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
]

[project.urls]
Homepage      = "https://atheris.ai"
Docs          = "https://atheris.ai/docs"
Repository    = "https://github.com/Guruprasath-Annadurai/Orca"
Changelog     = "https://atheris.ai/changelog"
"Bug Tracker" = "https://github.com/Guruprasath-Annadurai/Orca/issues"

[project.optional-dependencies]
memory = ["chromadb>=0.5.0"]
docs   = ["chromadb>=0.5.0", "pypdf>=4.0.0", "python-docx>=1.1.0", "pdfminer.six>=20221105"]
code   = []   # sandboxed exec uses stdlib only
voice  = []   # Web Speech API — browser-native, no Python deps
mcp    = ["mcp>=1.0.0"]
stripe = ["stripe>=7.0.0"]
dev    = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "mypy>=1.10.0"]
all    = [
    "chromadb>=0.5.0",
    "pypdf>=4.0.0", "python-docx>=1.1.0", "pdfminer.six>=20221105",
    "mcp>=1.0.0",
]
train  = [
    "unsloth>=2024.11.0",
    "trl>=0.12.0",
    "transformers>=4.45.0",
    "datasets>=3.0.0",
    "peft>=0.13.0",
    "bitsandbytes>=0.44.0",
    "accelerate>=1.0.0",
    "wandb>=0.18.0",
    "scipy>=1.14.0",
]

[project.scripts]
orca = "orca.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["orca"]

[tool.hatch.build.targets.wheel.shared-data]
"orca/serve/web" = "orca/serve/web"

[tool.hatch.metadata]
allow-direct-references = true
